# meeting-recordings-diarized

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
