[project]
name = "meeting-diarize"
version = "0.1.0"
description = "My Meeting Diarizer, optimized for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gigaam>=0.1.0",
    "huggingface-hub>=0.20.0",
    "mlx-whisper>=0.4.3",
    "onnxruntime>=1.18.0",
    "pathlib>=1.0.1",
    "pyannote-audio>=3.4.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
]

[tool.uv.sources]
gigaam = { git = "https://github.com/salute-developers/GigaAM.git" }
